--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,10 +43,10 @@ jobs:
         git config user.email "causeless@gmail.com"
         
         # replace the version
-        VERSION=$(sed -e 's/^__version__ = "([0-9\.]\+)"$/\1/' setup.py)
-        NEWVERSION=$(date -u "+%Y%m%d%H%M%S")
-        sed -i 's/^\(__version__ = "[0-9\.]\+\).[0-9]\+"$/\1.'${NEWVERSION}'"/' setup.py
-        NEWTAG=$(sed -e 's/^__version__ = "([0-9\.]\+)"$/v\1/' setup.py)
+        VERSION=$(sed -nr 's/^__version__ = "([0-9\.]+)"$/\1/p' setup.py)
+        NEWDATE=$(date -u "+%Y%m%d%H%M%S")
+        sed -ri 's/^(__version__ = "[0-9\\.]+).[0-9]+"$/\1.'${NEWDATE}'"/' setup.py
+        NEWTAG=$(sed -nr 's/^__version__ = "([0-9\.]+)"$/v\1/p' setup.py)
 
         # break if there is no change in the list, or not a manual release request
         echo ${VERSION} | grep -qE "\.0$" || \
