--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
         pip install .
         python setup.py sdist --formats=gztar
         python setup.py bdist_wheel --universal
-        python -m publicsuffixlist.test || echo "Some tests failed." && exit 1
+        python -m publicsuffixlist.test
         
         git add setup.py publicsuffixlist/public_suffix_list.dat
         git commit -m "automated release"
