--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,11 +19,16 @@ jobs:
 
     - name: Update local publish branch
       run: |
+        git config user.name "ko-zu (github-actions)"
+        git config user.email "causeless@gmail.com"
+        
         git fetch origin main
         git fetch origin publish
         git checkout origin/publish -b publish
+
+        VERSION=$(sed -nr 's/^__version__ = "([0-9\.]+)"$/\1/p' setup.py)
         git merge -X theirs --allow-unrelated-histories \
-          origin/main -m "Automated Merge: sync with 'origin/main'"
+          origin/main -m "Automated Merge: sync with 'origin/main' v${VERSION}"
 
     - name: Set up Python
       uses: actions/setup-python@v3
@@ -42,9 +47,6 @@ jobs:
 
     - name: Commit the change
       run: |
-        git config user.name "ko-zu (github-actions)"
-        git config user.email "causeless@gmail.com"
-        
         # replace the version
         VERSION=$(sed -nr 's/^__version__ = "([0-9\.]+)"$/\1/p' setup.py)
         NEWDATE=$(date -u "+%Y%m%d%H%M%S")
