--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,12 +21,14 @@ jobs:
       run: |
         git config user.name "ko-zu (github-actions)"
         git config user.email "causeless@gmail.com"
+
+        # parse version from main repo
+        VERSION=$(sed -nr 's/^__version__ = "([0-9\.]+)"$/\1/p' setup.py)
         
         git fetch origin main
         git fetch origin publish
         git checkout origin/publish -b publish
 
-        VERSION=$(sed -nr 's/^__version__ = "([0-9\.]+)"$/\1/p' setup.py)
         git merge -X theirs --allow-unrelated-histories \
           origin/main -m "Automated Merge: sync with 'origin/main' v${VERSION}"
 
@@ -49,7 +51,7 @@ jobs:
       run: |
         # replace the version
         VERSION=$(sed -nr 's/^__version__ = "([0-9\.]+)"$/\1/p' setup.py)
-        NEWDATE=$(date -u "+%Y%m%d%H%M%S")
+        NEWDATE=$(date -u "+%Y%m%d")
         sed -ri 's/^(__version__ = "[0-9\\.]+).[0-9]+"$/\1.'${NEWDATE}'"/' setup.py
         NEWTAG=$(sed -nr 's/^__version__ = "([0-9\.]+)"$/v\1/p' setup.py)
 
