--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,7 @@ jobs:
         git push origin ${NEWTAG}
     
     - name: Publish package to TestPyPI
-      if: ${{ steps.gennewversion.outcome == "success" }}
+      if: ${{ steps.gennewversion.outcome == 'success' }}
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
