--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
   schedule:
     - cron: "35 1 * * *"
 
-envs:
+env:
   BASEBRANCH: main
   WORKBRANCH: autorelease
   USERNAME: ko-zu (github-actions)
