--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches:
     - main
   schedule:
-    - cron: "35 1 * * *"
+    - cron: "*/10 * * * *"
 
 env:
   BASEBRANCH: main
@@ -81,10 +81,12 @@ jobs:
         python setup.py bdist_wheel --universal
         python -m publicsuffixlist.test
 
-        # break if there is no change while scheduled run
-        if [[ "${{ github.event_name }}" = "schedule" ]] ; then
-          ! git diff --exit-code --quiet publicsuffixlist/public_suffix_list.dat || \
-          exit 1
+        # break if there is no change in PSL while scheduled run
+        if [[ "${{ github.event_name }}" = "schedule" && \
+              ! git diff --exit-code --quiet publicsuffixlist/public_suffix_list.dat ]] ; then
+          echo "No PSL change on scheduled update"
+          echo "built_package=false" >> $GITHUB_OUTPUT
+          exit 0
         fi
 
         git add setup.py publicsuffixlist/public_suffix_list.dat
@@ -92,9 +94,11 @@ jobs:
         git push origin $WORKBRANCH
         git tag ${NEWTAG}
         git push origin ${NEWTAG}
+
+        echo "built_package=true" >> $GITHUB_OUTPUT
     
     - name: Publish package to TestPyPI
-      if: ${{ steps.gennewversion.outcome == 'success' }}
+      if: ${{ steps.gennewversion.outputs.built_package == 'true' }}
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
