Fix shell conditional

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,11 +82,12 @@ jobs:
         python -m publicsuffixlist.test
 
         # break if there is no change in PSL while scheduled run
-        if [[ "${{ github.event_name }}" = "schedule" && \
-              ! git diff --exit-code --quiet publicsuffixlist/public_suffix_list.dat ]] ; then
-          echo "No PSL change on scheduled update"
-          echo "built_package=false" >> $GITHUB_OUTPUT
-          exit 0
+        if [[ "${{ github.event_name }}" = "schedule" ]] ; then
+          if ! git diff --exit-code --quiet publicsuffixlist/public_suffix_list.dat ; then
+            echo "No PSL change on scheduled update"
+            echo "built_package=false" >> $GITHUB_OUTPUT
+            exit 0
+          fi
         fi
 
         git add setup.py publicsuffixlist/public_suffix_list.dat
