--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,19 +54,15 @@ jobs:
         git merge -X theirs --allow-unrelated-histories \
           origin/$BASEBRANCH -m "Automated merge: sync with 'origin/${BASEBRANCH}' v${BASEVERSION}"
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - uses: actions/setup-python@v4
       with:
         python-version: '3.x'
     
-    - name: Install dependencies
-      run: |
-        python -m pip install --progress-bar off --upgrade pip
-        pip install --progress-bar off setuptools wheel twine requests
-
     - name: Commit the change and build if required
       id: gennewversion
       run: |
+        python -m pip install --progress-bar off --upgrade pip
+        pip install --progress-bar off setuptools wheel twine requests
         pip install .
         python -m publicsuffixlist.update
         
